[package]
name = "kraken"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
urlencoding = "2"
time = { version = "0.3", features = ["formatting"] }
rfd = "0.14"
anyhow = "1"
